--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,10 +7,21 @@
     android:layout_height="match_parent"
     tools:context=".LoginActivity">
 
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schema.android.com/apk/res/res-auto"
+        android:id="@+id/navigation"
+        android:layout_width="match_parent"
+        android:layout_height="79dp"
+        android:layout_marginTop="650"
+        android:layout_gravity="start"
+        app:menu="@menu/my_navigation_items" />
+
     <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appBarLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fitsSystemWindows="true"/>
+        android:fitsSystemWindows="true" />
 
 
     <androidx.core.widget.NestedScrollView
@@ -29,18 +40,21 @@
                 android:id="@+id/img_guni"
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
+                android:layout_marginTop="64dp"
+                android:layout_marginBottom="265dp"
                 android:src="@drawable/guni_pink_logo"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toEndOf="@id/toolbar"
                 app:layout_constraintTop_toTopOf="parent" />
-
 
             <com.google.android.material.card.MaterialCardView
                 android:id="@+id/matertalcardview"
                 android:layout_width="380dp"
                 android:layout_height="265dp"
-                app:cardElevation="10dp"
                 android:elevation="5dp"
+                app:cardElevation="10dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -49,57 +63,86 @@
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/constraintLayout2"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:flow_horizontalBias="0.5"
+                    android:layout_height="196dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/img_guni">
 
-                    <EditText
-                        android:elevation="1dp"
-                        android:id="@+id/edEmail"
-                        android:layout_width="350dp"
-                        android:layout_height="80dp"
-                        android:layout_margin="20dp"
-                        android:padding="15dp"
-                        android:text="E-mail"
-                        android:drawableRight="@drawable/ic_baseline_email_24"
-                        android:textColor="@color/cardview_dark_background"
-                        android:textSize="25dp"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
 
-                    <EditText
-                        android:elevation="1"
-                        android:id="@+id/edPasseord"
-                        android:layout_width="350dp"
-                        android:layout_height="80dp"
-                        android:layout_margin="10dp"
-                        android:padding="15dp"
-                        android:text="Password"
-                        android:textColor="@color/cardview_dark_background"
-                        android:drawableRight="@drawable/ic_baseline_vpn_key_24"
-                        android:textSize="25dp"
+                    <com.google.android.material.card.MaterialCardView
+                        android:id="@+id/matertalcardview"
+                        android:layout_width="match_parent"
+                        android:layout_height="200dp"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginEnd="10dp"
+                        android:elevation="5dp"
+                        app:cardElevation="10dp"
+                        app:flow_horizontalBias="1.0"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toEndOf="@id/edEmail"
+                        app:layout_constraintHorizontal_bias="1.0"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/edEmail" />
+                        app:layout_constraintTop_toBottomOf="@id/logoimg"
+                        app:layout_constraintVertical_bias="1.0">
 
-                    <androidx.core.widget.NestedScrollView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-                        tools:layout_editor_absoluteX="0dp"
-                        tools:layout_editor_absoluteY="1dp">
+                        <RelativeLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content">
+                            <com.google.android.material.textfield.TextInputLayout
+                                android:id="@+id/email"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_margin="10dp"
+                                android:hint="Email"
+                                app:endIconDrawable="@drawable/ic_baseline_email_24"
+                                app:endIconMode="custom"
+                                app:endIconTint="@color/pink">
 
-                        <androidx.constraintlayout.widget.ConstraintLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            app:layout_behavior="@string/appbar_scrolling_view_behavior"></androidx.constraintlayout.widget.ConstraintLayout>
-                    </androidx.core.widget.NestedScrollView>
+                                <com.google.android.material.textfield.TextInputEditText
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:inputType="textEmailAddress" />
+
+                            </com.google.android.material.textfield.TextInputLayout>
+
+                            <com.google.android.material.textfield.TextInputLayout
+
+                                android:layout_width="match_parent"
+                                android:layout_below="@+id/email"
+                                android:layout_height="wrap_content"
+                                android:layout_margin="10dp"
+
+                                android:hint="Password"
+                                app:endIconDrawable="@drawable/ic_baseline_vpn_key_24"
+                                app:endIconMode="custom"
+                                app:endIconTint="@color/pink">
+
+                                <com.google.android.material.textfield.TextInputEditText
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:inputType="textPassword"
+                                    />
+
+                                <androidx.core.widget.NestedScrollView
+
+                                    android:layout_width="match_parent"
+                                    android:layout_height="match_parent"
+                                    app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+                                    <androidx.constraintlayout.widget.ConstraintLayout
+                                        android:layout_width="match_parent"
+                                        android:layout_height="wrap_content"
+                                        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+                                    </androidx.constraintlayout.widget.ConstraintLayout>
+
+                                </androidx.core.widget.NestedScrollView>
+
+                            </com.google.android.material.textfield.TextInputLayout>
+                        </RelativeLayout>
+                    </com.google.android.material.card.MaterialCardView>
+
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
                 <TextView
@@ -120,13 +163,16 @@
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="99dp"
+        android:layout_height="?attr/actionBarSize"
+        app:layout_anchor="@+id/appBarLayout"
+        app:layout_anchorGravity="bottom|center"
         app:layout_scrollFlags="scroll|enterAlways|snap" />
 
     <Button
         android:id="@+id/button"
         android:layout_width="130"
         android:layout_height="wrap_content"
+        android:layout_marginTop="400dp"
         android:layout_marginLeft="140dp"
         android:padding="10dp"
         android:text="Login"
@@ -140,7 +186,7 @@
         android:text="Don't have an account?"
         android:textSize="20dp"
         android:id="@+id/acc"
-        android:layout_marginTop="440dp"
+        android:layout_marginTop="500dp"
         android:layout_marginLeft="20dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -154,7 +200,7 @@
         android:id="@+id/acc"
         android:textStyle="bold"
         android:textColor="#DB3D91"
-        android:layout_marginTop="440dp"
+        android:layout_marginTop="500dp"
         android:layout_marginLeft="250dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
