--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -21,7 +22,7 @@
     <androidx.core.widget.NestedScrollView
         android:id="@+id/nestedScrollView"
         android:layout_width="match_parent"
-        android:layout_height="884dp"
+        android:layout_height="670dp"
         android:layout_marginBottom="50dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
@@ -34,14 +35,14 @@
             <ImageView
                 android:id="@+id/img_guni"
                 android:layout_width="match_parent"
-                android:layout_height="100dp"
+                android:layout_height="90dp"
                 android:src="@drawable/guni_pink_logo" />
 
             <com.google.android.material.card.MaterialCardView
                 android:id="@+id/mcv"
                 android:layout_width="match_parent"
-                android:layout_height="380dp"
-                android:layout_marginHorizontal="20dp"
+                android:layout_height="450"
+                android:layout_margin="20dp"
                 app:cardElevation="20dp">
 
                 <LinearLayout
@@ -49,118 +50,150 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
 
-                    <EditText
-                        android:layout_width="350dp"
-                        android:layout_height="50dp"
-                        android:layout_margintop="10"
-                        android:layout_marginLeft="10"
-                        android:drawableRight="@drawable/ic_baseline_person_24"
-                        android:text="User Full Name"
-                        android:textSize="20"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
+                    <com.google.android.material.textfield.TextInputLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginRight="10"
+                        android:hint="User Full Name  "
+                        app:endIconDrawable="@drawable/ic_baseline_person_24"
+                        app:endIconMode="custom"
+                        app:endIconTint="@color/pink">
 
-                    <EditText
-                        android:layout_width="350dp"
-                        android:layout_height="50dp"
-                        android:layout_marginLeft="10"
-                        android:drawableRight="@drawable/ic_baseline_phone_android_24"
-                        android:text="Phone Number"
-                        android:textSize="20"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content" />
+                    </com.google.android.material.textfield.TextInputLayout>
 
-                    <EditText
-                        android:layout_width="350dp"
-                        android:layout_height="50dp"
-                        android:layout_marginLeft="10"
-                        android:drawableRight="@drawable/ic_baseline_location_city_24"
-                        android:text="City"
-                        android:textSize="20"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
+                    <com.google.android.material.textfield.TextInputLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginRight="10"
+                        android:hint="Phone Number"
+                        app:endIconDrawable="@drawable/ic_baseline_phone_android_24"
+                        app:endIconMode="custom"
+                        app:endIconTint="@color/pink">
 
-                    <EditText
-                        android:layout_width="350dp"
-                        android:layout_height="50dp"
-                        android:layout_marginLeft="10"
-                        android:drawableRight="@drawable/ic_baseline_email_24"
-                        android:text="Email"
-                        android:textSize="20"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content" />
+                    </com.google.android.material.textfield.TextInputLayout>
 
-                    <EditText
-                        android:layout_width="350dp"
-                        android:layout_height="50dp"
-                        android:layout_marginLeft="10"
-                        android:drawableRight="@drawable/ic_baseline_vpn_key_24"
-                        android:text="Password"
-                        android:textSize="20"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
+                    <com.google.android.material.textfield.TextInputLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginRight="10"
+                        android:hint="City"
+                        app:endIconDrawable="@drawable/ic_baseline_location_city_24"
+                        app:endIconMode="custom"
+                        app:endIconTint="@color/pink">
 
-                    <EditText
-                        android:layout_width="350dp"
-                        android:layout_height="50dp"
-                        android:layout_marginLeft="10"
-                        android:drawableRight="@drawable/ic_baseline_vpn_key_24"
-                        android:text="Confirm Password"
-                        android:textSize="20"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content" />
+                    </com.google.android.material.textfield.TextInputLayout>
+
+                    <com.google.android.material.textfield.TextInputLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginRight="10"
+                        android:hint="Email"
+                        app:endIconDrawable="@drawable/ic_baseline_email_24"
+                        app:endIconMode="custom"
+                        app:endIconTint="@color/pink">
+
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content" />
+                    </com.google.android.material.textfield.TextInputLayout>
+
+                    <com.google.android.material.textfield.TextInputLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginRight="10"
+                        android:hint="Password"
+                        app:endIconDrawable="@drawable/ic_baseline_vpn_key_24"
+                        app:endIconMode="custom"
+                        app:endIconTint="@color/pink">
+
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:inputType="textPassword" />
+                    </com.google.android.material.textfield.TextInputLayout>
+
+                    <com.google.android.material.textfield.TextInputLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginRight="10"
+                        android:hint="Confirm Password"
+                        app:endIconDrawable="@drawable/ic_baseline_vpn_key_24"
+                        app:endIconMode="custom"
+                        app:endIconTint="@color/pink">
+
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:inputType="textPassword" />
+                    </com.google.android.material.textfield.TextInputLayout>
 
 
                 </LinearLayout>
 
             </com.google.android.material.card.MaterialCardView>
 
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="20dp"
+                android:orientation="horizontal">
 
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Do you have an account?"
+                    android:textSize="20dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
-
+                <TextView
+                    android:id="@+id/login"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20"
+                    android:text="LOGIN"
+                    android:textColor="#DB3D91"
+                    android:textSize="20dp"
+                    android:textStyle="bold"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+            </LinearLayout>
         </LinearLayout>
 
     </androidx.core.widget.NestedScrollView>
     <Button
-        android:id="@+id/button"
-        android:layout_width="130"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margintop="450dp"
-        android:layout_marginLeft="140dp"
-        android:padding="10dp"
-        android:text="Register"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="600"
         android:textSize="17"
-        app:layout_anchor="@+id/mcv"
-        app:layout_anchorGravity="bottom" />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Do you have an account?"
-        android:textSize="20dp"
-        android:id="@+id/acc"
-        android:layout_marginTop="610dp"
-        android:layout_marginLeft="20dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        android:layout_marginLeft="145dp"
+        app:layout_anchor="@id/mcv"
+        android:text="Register"
+        android:orientation="horizontal"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="LOGIN"
-        android:textSize="20dp"
-        android:id="@+id/acc"
-        android:textStyle="bold"
-        android:textColor="#DB3D91"
-        android:layout_marginTop="610dp"
-        android:layout_marginLeft="270dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
