--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -2,10 +2,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/bottom_nav_login"
-        android:title="Login"
+        android:title="@string/login"
         android:icon="@drawable/ic_baseline_login_24"/>
     <item
         android:id="@+id/bottom_nav_reg"
-        android:title="Registration"
+        android:title="@string/registration"
         android:icon="@drawable/ic_baseline_how_to_reg_24"/>
 </menu>
